tasks/force-app/main/default/objects/Cast__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casts</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>