tasks/force-app/main/default/objects/Cast__c/fields/Char__c.field-meta.xml
<CustomField>
    <fullName>Char__c</fullName>
    <label>Character</label>
    <length>255</length>
    <type>Text</type>
</CustomField>