tasks/force-app/main/default/objects/Cast__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Casts</relationshipLabel>
    <relationshipName>Casts</relationshipName>
    <type>Lookup</type>
</CustomField>