tasks/force-app/main/default/objects/Cast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Movie__c</columns>
    <columns>Actor__c</columns>
    <columns>Char__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>