tasks/force-app/main/default/objects/Cast__c/listViews/Recently_Viewed.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed</fullName>
    <columns>NAME</columns>
    <columns>Movie__c</columns>
    <columns>Actor__c</columns>
    <columns>Char__c</columns>
    <filterScope>Mine</filterScope>
    <label>Recently Viewed</label>
</ListView>